# komodo

./: Cargo.toml  runfile.toml
client/core/rs/: Cargo.toml
client/core/rs/src/: ws.rs
client/core/rs/src/api/: auth.rs  terminal.rs  user.rs
client/core/rs/src/api/execute/: deployment.rs  mod.rs  stack.rs  swarm.rs
client/core/rs/src/api/read/: deployment.rs  docker.rs  mod.rs  server.rs  stack.rs  swarm.rs  terminal.rs
client/core/rs/src/api/write/: mod.rs  server.rs  swarm.rs  terminal.rs
client/core/rs/src/entities/: builder.rs  deployment.rs  mod.rs  permission.rs  resource.rs  server.rs  stack.rs  swarm.rs  terminal.rs  toml.rs  update.rs  user.rs
client/core/rs/src/entities/config/: core.rs  periphery.rs
client/core/rs/src/entities/config/cli/args/: mod.rs  ssh.rs  terminal.rs
client/core/rs/src/entities/docker/: config.rs  container.rs  mod.rs  network.rs  node.rs  secret.rs  service.rs  stack.rs  swarm.rs  task.rs  volume.rs
client/core/rs/src/ws/: mod.rs  terminal.rs  update.rs
client/core/ts/src/: lib.ts  responses.ts  terminal.ts  types.ts
client/periphery/rs/src/api/: compose.rs  container.rs  mod.rs  poll.rs  swarm.rs  terminal.rs
client/periphery/rs/src/transport/: mod.rs
compose/: compose.env  ferretdb.compose.yaml  mongo.compose.yaml  periphery.compose.yaml
config/: core.config.toml  periphery.config.toml
docsite/docs/: intro.md
docsite/docs/setup/: advanced.mdx  backup.md  connect-servers.mdx  version-upgrades.md
example/alerter/: Dockerfile
example/update_logger/: Dockerfile
frontend/: package.json  tsconfig.json
frontend/public/client/: lib.d.ts  lib.js  responses.d.ts  terminal.d.ts  terminal.js  types.d.ts  types.js
frontend/src/: main.tsx  router.tsx  types.d.ts
frontend/src/components/: inspect.tsx  layouts.tsx  omnibar.tsx  sidebar.tsx  util.tsx
frontend/src/components/alert/: details.tsx
frontend/src/components/api-keys/: table.tsx
frontend/src/components/config/: index.tsx  maintenance.tsx  util.tsx
frontend/src/components/resources/: common.tsx  index.tsx
frontend/src/components/resources/action/: config.tsx  index.tsx
frontend/src/components/resources/builder/: config.tsx
frontend/src/components/resources/deployment/: actions.tsx  index.tsx  inspect.tsx  table.tsx  tabs.tsx
frontend/src/components/resources/deployment/config/: index.tsx
frontend/src/components/resources/deployment/config/components/: network.tsx
frontend/src/components/resources/procedure/: config.tsx  index.tsx
frontend/src/components/resources/repo/: index.tsx
frontend/src/components/resources/server/: actions.tsx  config.tsx  confirm-pubkey.tsx  index.tsx  monitoring-table.tsx  table.tsx  tabs.tsx
frontend/src/components/resources/server/info/: images.tsx  index.tsx  networks.tsx  volumes.tsx
frontend/src/components/resources/stack/: actions.tsx  config.tsx  index.tsx  log.tsx  services.tsx  table.tsx  tabs.tsx
frontend/src/components/resources/swarm/: config.tsx  index.tsx  table.tsx  tabs.tsx
frontend/src/components/resources/swarm/info/: configs.tsx  index.tsx  inspect.tsx  nodes.tsx  secrets.tsx  services.tsx  stacks.tsx  tasks.tsx
frontend/src/components/resources/sync/: actions.tsx  config.tsx  index.tsx  pending.tsx  tabs.tsx
frontend/src/components/terminal/: container.tsx  index.tsx  server.tsx
frontend/src/components/topbar/: components.tsx  index.tsx
frontend/src/components/users/: hooks.ts  permissions-selector.tsx
frontend/src/lib/: color.ts  dashboard-preferences.ts  hooks.ts  socket.tsx  utils.ts
frontend/src/monaco/: init.ts
frontend/src/pages/: alerts.tsx  containers.tsx  dashboard.tsx  login.tsx  resource.tsx  resources.tsx  schedules.tsx  terminal.tsx  terminals.tsx  user.tsx
frontend/src/pages/docker/: image.tsx  network.tsx  volume.tsx
frontend/src/pages/docker/container/: index.tsx  inspect.tsx
frontend/src/pages/home/: all_resources.tsx
frontend/src/pages/server-info/: image.tsx  network.tsx  volume.tsx
frontend/src/pages/server-info/container/: index.tsx
frontend/src/pages/settings/: core-info.tsx  index.tsx  profile.tsx  variables.tsx
frontend/src/pages/settings/profile/: api-key.tsx  index.tsx  passkey.tsx  totp.tsx
frontend/src/pages/stack-service/: index.tsx  inspect.tsx  log.tsx  tabs.tsx
frontend/src/pages/swarm/: config.tsx  log.tsx  node.tsx  remove.tsx  secret.tsx  service.tsx  stack.tsx  task.tsx
frontend/src/ui/: json.tsx  mobile-friendly-tabs.tsx
lib/cache/src/: lib.rs
lib/command/: Cargo.toml
lib/command/src/: lib.rs  output.rs
lib/database/src/: lib.rs
lib/encoding/src/: response.rs
lib/git/: Cargo.toml
lib/git/src/: init.rs  pull.rs
lib/logger/src/: lib.rs  otel.rs
lib/noise/: Cargo.toml
lib/noise/src/key/: private.rs  public.rs
lib/rate_limit/: Cargo.toml
lib/rate_limit/src/: lib.rs
lib/transport/: Cargo.toml
lib/transport/src/: auth.rs  channel.rs
lib/transport/src/websocket/: mod.rs  tungstenite.rs
lib/validations/: Cargo.toml
lib/validations/src/: lib.rs
scripts/: setup-periphery.py
