[package]
name = "noise"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
komodo_client.workspace = true
secret_file.workspace = true
#
data-encoding.workspace = true
pem-rfc7468.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
colored.workspace = true
tracing.workspace = true
anyhow.workspace = true
pkcs8.workspace = true
snow.workspace = true
spki.workspace = true
der.workspace = true