[package]
name = "rate_limit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# local
cache.workspace = true
# mogh
serror.workspace = true
#
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true